fixed font weight glitch on mobile

--- a/style.css
+++ b/style.css
@@ -289,6 +289,8 @@ body[data-color-mode="1"] * {
 	cursor: pointer;
 	border: unset;
 	font-family: "Limkin Pixel", sans-serif;
+	font-weight: 500;
+	font-variation-settings: "wght" 500;
 	color: var(--primary);
 	gap: 8px;
 	text-decoration: none;
